# nebuladb

./: .dockerignore  .env.deploy.example  .gitignore  AI_USE_CASES.md  Cargo.toml  Dockerfile  PROBLEMS_SOLVED.md  README.md  USE_CASES.md  docker-compose.multiregion.yml  docker-compose.rollover.yml  docker-compose.yml
.github/workflows/: deploy-k3s.yml  deploy.yml  nightly.yml  operator.yml  publish.yml
apps/ingest-worker/: Cargo.toml  Dockerfile
apps/ingest-worker/src/: detect.rs  main.rs  metadata.rs
apps/showcase/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/showcase/lua/: leader_route.lua  write_proxy.lua
apps/showcase/src/: App.tsx  api.ts  components.tsx  freshness.tsx  index.css  main.tsx  sse.ts  theme.ts  tree.tsx  utils.ts
crates/nebula-backup/: Cargo.toml
crates/nebula-backup/src/: bundle.rs  engine.rs  error.rs  lib.rs  manifest.rs  target.rs
crates/nebula-backup/tests/: e2e.rs
crates/nebula-bm25/: Cargo.toml
crates/nebula-bm25/src/: lib.rs
crates/nebula-cache/: Cargo.toml
crates/nebula-cache/src/: lib.rs
crates/nebula-cdc/: Cargo.toml
crates/nebula-cdc/src/: consumer.rs  engine.rs  event.rs  filter.rs  lib.rs
crates/nebula-chunk/: Cargo.toml
crates/nebula-chunk/src/: lib.rs
crates/nebula-client/: Cargo.toml
crates/nebula-client/src/: lib.rs
crates/nebula-client/tests/: integration.rs
crates/nebula-core/: Cargo.toml
crates/nebula-core/src/: lib.rs
crates/nebula-embed/: Cargo.toml
crates/nebula-embed/src/: breaker.rs  lib.rs  mock.rs  openai.rs  retry.rs
crates/nebula-grpc/: Cargo.toml  build.rs
crates/nebula-grpc/proto/: nebula.proto
crates/nebula-grpc/src/: cross_region.rs  follower.rs  lib.rs
crates/nebula-grpc/tests/: e2e.rs  ha_crud_rag.rs  multi_region.rs  replication.rs
crates/nebula-index/: Cargo.toml
crates/nebula-index/src/: durability.rs  lib.rs
crates/nebula-index/tests/: concurrency.rs  deferred_embedding.rs  durability.rs  hybrid_quality_bench.rs  recovery_bench.rs
crates/nebula-llm/: Cargo.toml
crates/nebula-llm/src/: claude.rs  lib.rs  mock.rs  ollama.rs  openai_chat.rs
crates/nebula-mcp/: Cargo.toml
crates/nebula-mcp/src/: client.rs  lib.rs  main.rs  server.rs  tools.rs
crates/nebula-pgwire/: Cargo.toml
crates/nebula-pgwire/src/: lib.rs
crates/nebula-pgwire/tests/: e2e.rs
crates/nebula-raft/: Cargo.toml  build.rs
crates/nebula-raft/proto/: raft.proto
crates/nebula-raft/src/: boot.rs  lib.rs  log.rs  network.rs  raft_storage.rs  snapshot.rs  state_machine.rs  storage.rs  types.rs
crates/nebula-raft/tests/: cluster.rs
crates/nebula-redis-cache/: Cargo.toml
crates/nebula-redis-cache/src/: lib.rs
crates/nebula-rerank/: Cargo.toml
crates/nebula-rerank/src/: expand.rs  http.rs  lib.rs
crates/nebula-resource/: Cargo.toml
crates/nebula-resource/src/: lib.rs  probe.rs
crates/nebula-server/: Cargo.toml
crates/nebula-server/src/: actuators.rs  audit.rs  backup_routes.rs  build_info.rs  cluster.rs  cross_region_status.rs  embedder_identity.rs  error.rs  home_region.rs  jwt.rs  lib.rs  log_stream.rs  main.rs  metrics.rs  middleware.rs  raft_routes.rs  ratelimit.rs  region_failover.rs  router.rs  slow_log.rs  snapshot_scheduler.rs  state.rs  workload.rs
crates/nebula-server/tests/: api.rs  snapshot_scheduler.rs
crates/nebula-sql/: Cargo.toml
crates/nebula-sql/src/: cache.rs  error.rs  executor.rs  lib.rs  parser.rs  plan.rs  plan_tree.rs
crates/nebula-sql/tests/: aggregate.rs  ai_answer.rs  executor.rs  join.rs  plan.rs
crates/nebula-vector/: Cargo.toml
crates/nebula-vector/benches/: hnsw_bench.rs
crates/nebula-vector/src/: distance.rs  hnsw.rs  lib.rs
crates/nebula-wal/: Cargo.toml
crates/nebula-wal/src/: lib.rs  subscriber.rs
crates/nebula-wal/tests/: subscriber.rs
crates/nebulactl/: Cargo.toml
crates/nebulactl/src/: main.rs
deploy/gatus/: config.yaml
deploy/grafana/dashboards/: nebula-ai-metrics.json  nebula-durability.json  nebula-overview.json  nebula-query-performance.json
deploy/helm/nebuladb/: Chart.yaml  README.md  values-acc.yaml  values-int.yaml  values-prod.yaml  values-test.yaml  values.yaml
deploy/prometheus/: alerts.yml  prometheus.yml
docs/: active-active-rollout-prompt.md  ha-xdcr-vision-prompt.md  integration-test-prompt.md  openapi.yaml
docs/design/: 0001-multi-region-active-active.md  0002-backup-restore.md  0003-write-availability.md  0004-raft-implementation.md  0005-wal-cdc-streaming.md  0006-parallel-wal-replay.md  0007-zero-downtime-reads-writes.md  0008-batteries-included-rag.md  0009-rolling-upgrade-rebalance.md  0010-reliability-graceful-degradation.md  0011-dynamic-membership-and-failover.md  0012-mcp-native-platform.md
landing/: index.html
operator/: Dockerfile  Makefile  PROJECT  README.md  go.mod
operator/api/v1alpha1/: groupversion_info.go  nebulabackup_types.go  nebulabucket_types.go  nebulacluster_types.go  nebularebalance_types.go  nebularegionfailover_types.go  zz_generated_backup_deepcopy.go  zz_generated_deepcopy.go
operator/cmd/manager/: main.go
operator/config/crd/: kustomization.yaml
operator/config/default/: kustomization.yaml
operator/config/manager/: manager.yaml
operator/config/rbac/: role.yaml  role_binding.yaml  service_account.yaml
operator/examples/: backup-schedule.yaml  bucket-docs.yaml  cluster-basic.yaml  cluster-ha.yaml  cluster-raft.yaml  rebalance-failover.yaml  rebalance-scale.yaml  rebalance-swap.yaml  region-failover.yaml
operator/hack/: boilerplate.go.txt
operator/internal/controllers/: labels.go  nebulabackupschedule_controller.go  nebulabucket_controller.go  nebulacluster_controller.go  nebularebalance_controller.go  util.go  (+3 more)
prompts/: zero-downtime-rolling-upgrade-rebalance.md
scripts/: integration_validate.sh  lib.sh  reconcile.sh  replace_node.sh  rolling_upgrade.sh  seed.sh  seed_wiki.sh  smoke_load.sh  start.sh  test_metrics.sh  test_multiregion.sh  test_ollama.sh  test_pgwire.sh  test_rag.sh  test_rest.sh  test_rolling_upgrade.sh  test_wedge_fix.sh  wait_for.sh
(+39 files in other folders)
