[package]
name = "nebula-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nebula-embed = { path = "../nebula-embed" }

async-trait.workspace = true
parking_lot.workspace = true
sha2.workspace = true
lru.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
