[package]
name = "nebula-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tracing.workspace = true
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["full"] }
tower = "0.5"
axum = { workspace = true }
