[package]
name = "nebula-pgwire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nebula-core = { path = "../nebula-core" }
nebula-sql = { path = "../nebula-sql" }

pgwire.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
async-trait.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-postgres = "0.7"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
nebula-embed = { path = "../nebula-embed" }
nebula-index = { path = "../nebula-index" }
nebula-vector = { path = "../nebula-vector" }
