[package]
name = "nebula-raft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nebula-wal = { path = "../nebula-wal" }
nebula-index = { path = "../nebula-index" }
serde = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
openraft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { workspace = true, features = ["net"] }
nebula-embed = { path = "../nebula-embed" }
nebula-vector = { path = "../nebula-vector" }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
