[package]
name = "nebula-redis-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nebula-embed = { path = "../nebula-embed" }

async-trait.workspace = true
redis.workspace = true
sha2.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
