[package]
name = "nebula-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nebula-core = { path = "../nebula-core" }
nebula-index = { path = "../nebula-index" }

sqlparser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tokio = { workspace = true }
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
nebula-embed = { path = "../nebula-embed" }
nebula-vector = { path = "../nebula-vector" }
